tests/TBCWPATest/TypeErrorContainer/TXTypeErrorClass.php
<?php

namespace Bellisq\ContainerWithProvider\Tests\TBCWPATest\TypeErrorContainer;

use Bellisq\ContainerWithProvider\Tests\TBCWPATest\TypeErrorContainer\TXTypeErrorClassParent;


class TXTypeErrorClass extends TXTypeErrorClassParent
{
    
}
